src/objects/Client_Visit__c.object
<CustomObject>
    <fields>
        <fullName>C501_IS_Adults__c</fullName>
        <label>Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Box_Type__c</fullName>
        <label>Bag/Box Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra-Large</fullName>
                </value>
                <value>
                    <fullName>Special Diet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Checkout_Weight__c</fullName>
        <label>Checkout Weight</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Children__c</fullName>
        <label>Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Commodity_Usage_JSON__c</fullName>
        <description>JSON List showing amount of each commodity item used this visit.</description>
        <inlineHelpText>JSON List showing amount of each commodity item used this visit.</inlineHelpText>
        <label>Commodity Usage JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Created_Date__c</fullName>
        <description>Store the date the external entry was created.</description>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Household_Id__c</fullName>
        <label>External Household Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_IS_First_Visit_This_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A trigger automatically checks this box for the household&apos;s first visit in the calendar year.</inlineHelpText>
        <label>First Visit This Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Homeless_Counter__c</fullName>
        <description>Allows us to summarize homeless visits.</description>
        <formula>IF(C501_IS_Homeless__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows us to summarize homeless visits.</inlineHelpText>
        <label>Homeless Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_IS_Infants__c</fullName>
        <label>Infants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_More_Than_One_Person__c</fullName>
        <description>If the household had one person, this is 0; if more than one person, it is 1.  Allows us to compile statistics for more than one person.</description>
        <formula>IF(C501_IS_Total_People__c &gt; 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the household had one person, this is 0; if more than one person, it is 1.  Allows us to compile statistics for more than one person.</inlineHelpText>
        <label>More Than One Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Notes__c</fullName>
        <label>Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Out_Of_Area_Counter__c</fullName>
        <description>Allows us to summarize out of area visits.</description>
        <formula>IF(C501_IS_Out_Of_Area__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows us to summarize out of area visits.</inlineHelpText>
        <label>Out of Area Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Out_Of_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Points_Used__c</fullName>
        <label>Points Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Seniors__c</fullName>
        <label>Seniors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Total_People__c</fullName>
        <formula>C501_IS_Adults__c + C501_IS_Children__c + C501_IS_Seniors__c + C501_IS_Infants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Visit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C501_IS_Visit_Type__c</fullName>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Visits</relationshipLabel>
        <relationshipName>Client_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>C501_IS_Household__c</columns>
        <columns>C501_IS_Visitor__c</columns>
        <columns>C501_IS_Visit_Date__c</columns>
        <columns>C501_IS_Total_People__c</columns>
        <columns>C501_IS_Points_Used__c</columns>
        <columns>C501_IS_Checkout_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Past7</fullName>
        <columns>NAME</columns>
        <columns>C501_IS_Household__c</columns>
        <columns>C501_IS_Visitor__c</columns>
        <columns>C501_IS_Visit_Date__c</columns>
        <columns>C501_IS_Total_People__c</columns>
        <columns>C501_IS_Points_Used__c</columns>
        <columns>C501_IS_Checkout_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>C501_IS_Visit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Past 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Visits_Today</fullName>
        <columns>NAME</columns>
        <columns>C501_IS_Household__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Visits Today</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>